--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     }
 
     #come-back-to-ALLAH-btn {
-      background-image: linear-gradient(to right, #7f1e17, #e96c6c); /* Gradient red */
+      background-image: linear-gradient(to right, #5d120d, #e96c6c); /* Gradient red */
     }
 
     .menu button:hover {
