--- a/vector_apar_hsc.html
+++ b/vector_apar_hsc.html
@@ -8,7 +8,7 @@
     /* Global Styles */
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
     body {
-      background-color: #0D111D;
+      background-color: #000080;
       font-family: 'Roboto', sans-serif;
       margin: 0;
       overflow-x: hidden;
