--- a/my-courses.html
+++ b/my-courses.html
@@ -13,7 +13,8 @@
       margin: 0;
       overflow-x: hidden;
     }
-    .navbar {
+        /* Navbar */
+        .navbar {
       display: flex;
       align-items: center;
       background-color: #ffd700;
@@ -22,16 +23,19 @@
       top: 0;
       z-index: 500;
     }
+
     .hamburger {
       cursor: pointer;
       font-size: 1.5em;
       margin-right: 1em;
     }
+
     .navbar-center {
       flex-grow: 1;
       display: flex;
       justify-content: center;
     }
+
     .navbar-center a {
       text-decoration: none;
       color: black;
@@ -40,13 +44,16 @@
       margin-left: 1.5em;
       transition: color 0.3s;
     }
+
     .navbar-center a:hover {
       color: #555;
     }
+
     .navbar-right {
       display: flex;
       align-items: center;
     }
+
     .navbar-right a {
       text-decoration: none;
       color: black;
@@ -54,11 +61,13 @@
       font-size: 1.2rem;
       margin-left: 1em;
     }
+
     .cart-icon {
       font-size: 1.5em;
     }
-     /* Sidebar menu */
-     .sidebar {
+
+    /* Sidebar menu */
+    .sidebar {
       position: fixed;
       top: 0; left: -250px;
       width: 250px;
@@ -91,6 +100,11 @@
     .sidebar a:hover {
       background-color: #555;
       transform: scale(1.1) translateY(-5px);
+    }
+
+    .sidebar a.lets-learn-more {
+      font-size: 1.2rem;
+      color: cyan;
     }
 
     .sidebar.open {
@@ -143,6 +157,52 @@
     }
     .course-card button:hover {
       background-color: #45a049;
+    }
+    .menu button:hover {
+      transform: scale(1.1);
+      box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.2);
+    }
+
+    footer {
+      text-align: center;
+      padding: 1.5em;
+      background-color: #333;
+      color: white;
+      position: absolute;
+      width: 100%;
+      bottom: 0;
+    }
+
+    /* Responsive Styles */
+    @media (max-width: 768px) {
+      .navbar-center a, .navbar-right a {
+        font-size: 1rem;
+        margin-left: 1em;
+      }
+
+      .menu button {
+        padding: 1.5em 3em;
+        font-size: 1.2rem;
+      }
+
+      .menu {
+        gap: 1.5em;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .hamburger {
+        font-size: 1.2em;
+      }
+
+      .navbar-center a, .navbar-right a {
+        font-size: 0.9rem;
+      }
+
+      .menu button {
+        padding: 1em 2em;
+        font-size: 1rem;
+      }
     }
   </style>
 </head>
