--- a/vectors_class_hsc.html
+++ b/vectors_class_hsc.html
@@ -14,8 +14,8 @@
       overflow-x: hidden;
     }
 
-    /* Navbar Styles */
-    .navbar {
+  /* Navbar */
+  .navbar {
       display: flex;
       align-items: center;
       background-color: #ffd700;
@@ -24,16 +24,19 @@
       top: 0;
       z-index: 500;
     }
+
     .hamburger {
       cursor: pointer;
       font-size: 1.5em;
       margin-right: 1em;
     }
+
     .navbar-center {
       flex-grow: 1;
       display: flex;
       justify-content: center;
     }
+
     .navbar-center a {
       text-decoration: none;
       color: black;
@@ -42,9 +45,16 @@
       margin-left: 1.5em;
       transition: color 0.3s;
     }
+
     .navbar-center a:hover {
       color: #555;
     }
+
+    .navbar-right {
+      display: flex;
+      align-items: center;
+    }
+
     .navbar-right a {
       text-decoration: none;
       color: black;
@@ -53,7 +63,11 @@
       margin-left: 1em;
     }
 
-    /* Sidebar Styles */
+    .cart-icon {
+      font-size: 1.5em;
+    }
+
+    /* Sidebar menu */
     .sidebar {
       position: fixed;
       top: 0; left: -250px;
@@ -65,6 +79,7 @@
       transition: left 0.3s;
       z-index: 1001;
     }
+
     .sidebar h1 {
       text-align: center;
       font-size: 1.5em;
@@ -72,6 +87,7 @@
       font-weight: bold;
       color: orange;
     }
+
     .sidebar a {
       display: block;
       padding: 1em;
@@ -81,13 +97,21 @@
       text-decoration: none;
       transition: background 0.3s, transform 0.3s;
     }
+
     .sidebar a:hover {
       background-color: #555;
       transform: scale(1.1) translateY(-5px);
     }
+
+    .sidebar a.lets-learn-more {
+      font-size: 1.2rem;
+      color: cyan;
+    }
+
     .sidebar.open {
       left: 0;
     }
+
     .backward-arrow {
       font-size: 1.5em;
       color: white;
@@ -95,9 +119,30 @@
       margin-left: 1em;
       transition: transform 0.3s;
     }
+
     .backward-arrow:hover {
       transform: scale(1.1) translateY(-5px);
     }
+
+    /* Main menu buttons */
+    .menu {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 2em;
+      margin: 2em;
+    }
+
+    .menu button {
+      color: white;
+      border: none;
+      padding: 2em 4em;
+      font-size: 1.5rem;
+      cursor: pointer;
+      border-radius: 30px;
+      transition: transform 0.3s, box-shadow 0.3s;
+    }
+
 
     /* Cards Section */
     .cards-container {
@@ -154,11 +199,50 @@
       background-color: #45a049;
     }
 
-    /* Responsive Design */
+    .menu button:hover {
+      transform: scale(1.1);
+      box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.2);
+    }
+
+    footer {
+      text-align: center;
+      padding: 1.5em;
+      background-color: #333;
+      color: white;
+      position: absolute;
+      width: 100%;
+      bottom: 0;
+    }
+
+    /* Responsive Styles */
     @media (max-width: 768px) {
-      .cards-container {
-        flex-direction: column;
-        align-items: center;
+      .navbar-center a, .navbar-right a {
+        font-size: 1rem;
+        margin-left: 1em;
+      }
+
+      .menu button {
+        padding: 1.5em 3em;
+        font-size: 1.2rem;
+      }
+
+      .menu {
+        gap: 1.5em;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .hamburger {
+        font-size: 1.2em;
+      }
+
+      .navbar-center a, .navbar-right a {
+        font-size: 0.9rem;
+      }
+
+      .menu button {
+        padding: 1em 2em;
+        font-size: 1rem;
       }
     }
   </style>
@@ -183,13 +267,13 @@
   <div class="navbar">
     <span class="hamburger" onclick="toggleSidebar()">☰</span>
     <div class="navbar-center">
-      <a href="index.html">Home</a>
+      <a href="#">Home</a>
       <a href="#">Blog</a>
       <a href="#">Routine</a>
     </div>
     <div class="navbar-right">
       <a href="#">👤</a>
-      <a href="#">🛒</a>
+      <a href="#" class="cart-icon">🛒</a>
     </div>
   </div>
 
