--- a/vector_apar_hsc.html
+++ b/vector_apar_hsc.html
@@ -8,14 +8,14 @@
     /* Global Styles */
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
     body {
-      background-color: #000080;
+      background-color:#0D111D;
       font-family: 'Roboto', sans-serif;
       margin: 0;
       overflow-x: hidden;
     }
 
-    /* Navbar Styles */
-    .navbar {
+       /* Navbar */
+       .navbar {
       display: flex;
       align-items: center;
       background-color: #ffd700;
@@ -24,16 +24,19 @@
       top: 0;
       z-index: 500;
     }
+
     .hamburger {
       cursor: pointer;
       font-size: 1.5em;
       margin-right: 1em;
     }
+
     .navbar-center {
       flex-grow: 1;
       display: flex;
       justify-content: center;
     }
+
     .navbar-center a {
       text-decoration: none;
       color: black;
@@ -42,9 +45,16 @@
       margin-left: 1.5em;
       transition: color 0.3s;
     }
+
     .navbar-center a:hover {
       color: #555;
     }
+
+    .navbar-right {
+      display: flex;
+      align-items: center;
+    }
+
     .navbar-right a {
       text-decoration: none;
       color: black;
@@ -53,7 +63,11 @@
       margin-left: 1em;
     }
 
-    /* Sidebar Styles */
+    .cart-icon {
+      font-size: 1.5em;
+    }
+
+    /* Sidebar menu */
     .sidebar {
       position: fixed;
       top: 0; left: -250px;
@@ -65,6 +79,7 @@
       transition: left 0.3s;
       z-index: 1001;
     }
+
     .sidebar h1 {
       text-align: center;
       font-size: 1.5em;
@@ -72,6 +87,7 @@
       font-weight: bold;
       color: orange;
     }
+
     .sidebar a {
       display: block;
       padding: 1em;
@@ -81,13 +97,21 @@
       text-decoration: none;
       transition: background 0.3s, transform 0.3s;
     }
+
     .sidebar a:hover {
       background-color: #555;
       transform: scale(1.1) translateY(-5px);
     }
+
+    .sidebar a.lets-learn-more {
+      font-size: 1.2rem;
+      color: cyan;
+    }
+
     .sidebar.open {
       left: 0;
     }
+
     .backward-arrow {
       font-size: 1.5em;
       color: white;
@@ -95,6 +119,7 @@
       margin-left: 1em;
       transition: transform 0.3s;
     }
+
     .backward-arrow:hover {
       transform: scale(1.1) translateY(-5px);
     }
