--- a/vectors_class_hsc.html
+++ b/vectors_class_hsc.html
@@ -267,7 +267,7 @@
   <div class="navbar">
     <span class="hamburger" onclick="toggleSidebar()">☰</span>
     <div class="navbar-center">
-      <a href="#">Home</a>
+      <a href="index.html">Home</a>
       <a href="#">Blog</a>
       <a href="#">Routine</a>
     </div>
