--- a/Exams_hsc.html
+++ b/Exams_hsc.html
@@ -235,7 +235,7 @@
   <div class="sidebar" id="sidebar">
     <span class="backward-arrow" onclick="toggleSidebar()">←</span>
     <h1>Raians Academy</h1>
-    <a href="#">📝 My Courses</a>
+    <a href="my-courses.html">📝 My Courses</a>
     <a href="Classes.html">Classes</a>
     <a href="Exams_hsc.html">Exams</a>
     <a href="#">Tutor</a>
@@ -265,20 +265,20 @@
   <div class="courses">
     <div class="course-card">
       <h2>Physics</h2>
-      <a href="Physics_chapters_hsc.html"><button>Take Exam</button></a>
+      <a href="Physics_Exam_HSC.html"><button>Take Exam</button></a>
     </div>
     <div class="course-card">
         <h2>Chemistry</h2>
-        <a href="Chemistry_chapters_hsc.html"><button>Take Exam</button></a>
+        <a href="Chemistry_Exam_HSC.html"><button>Take Exam</button></a>
       </div>
       
     <div class="course-card">
       <h2>Higher Math</h2>
-      <a href="HigherMath_chapters_hsc.html"><button>Take Exam</button></a>
+      <a href="HigherMath_Exam_HSC.html"><button>Take Exam</button></a>
     </div>
     <div class="course-card">
       <h2>Biology</h2>
-      <a href="Biology_chapters_hsc.html"><button>Take Exam</button></a>
+      <a href="Biology_Exam_HSC.html"><button>Take Exam</button></a>
     </div>
   </div>
 
