--- a/vector_apar_hsc.html
+++ b/vector_apar_hsc.html
@@ -14,8 +14,8 @@
       overflow-x: hidden;
     }
 
-       /* Navbar */
-       .navbar {
+        /* Navbar */
+        .navbar {
       display: flex;
       align-items: center;
       background-color: #ffd700;
@@ -124,6 +124,7 @@
       transform: scale(1.1) translateY(-5px);
     }
 
+
     /* Videos Section */
     .videos-container {
       padding: 2em;
@@ -138,12 +139,12 @@
       border-radius: 15px;
       padding: 1.5em;
       width: 90%;
-      max-width: 1000px;
+      max-width: 700px;
       text-align: center;
     }
     .video-card iframe {
       width: 100%;
-      height: 500px;
+      height: 200px;
       border: none;
       border-radius: 10px;
     }
@@ -152,14 +153,45 @@
       font-weight: bold;
       font-size: 1.1rem;
     }
+    footer {
+      text-align: center;
+      padding: 1.5em;
+      background-color: #333;
+      color: white;
+      position: absolute;
+      width: 100%;
+      bottom: 0;
+    }
 
-    /* Responsive Design */
+    /* Responsive Styles */
     @media (max-width: 768px) {
-      .video-card iframe {
-        height: 300px;
+      .navbar-center a, .navbar-right a {
+        font-size: 1rem;
+        margin-left: 1em;
       }
-      .videos-container {
-        padding: 1em;
+
+      .menu button {
+        padding: 1.5em 3em;
+        font-size: 1.2rem;
+      }
+
+      .menu {
+        gap: 1.5em;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .hamburger {
+        font-size: 1.2em;
+      }
+
+      .navbar-center a, .navbar-right a {
+        font-size: 0.9rem;
+      }
+
+      .menu button {
+        padding: 1em 2em;
+        font-size: 1rem;
       }
     }
   </style>
