vector_apar_hsc.html
Signed-off-by: RaianFaisal03 <fahimfaisaltopu2003@gmail.com>

--- a/vector_apar_hsc.html
+++ b/vector_apar_hsc.html
@@ -8,14 +8,14 @@
     /* Global Styles */
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
     body {
-      background-color:#0D111D;
+      background-color: #0D111D;
       font-family: 'Roboto', sans-serif;
       margin: 0;
       overflow-x: hidden;
     }
 
-        /* Navbar */
-        .navbar {
+    /* Navbar */
+    .navbar {
       display: flex;
       align-items: center;
       background-color: #ffd700;
@@ -124,7 +124,6 @@
       transform: scale(1.1) translateY(-5px);
     }
 
-
     /* Videos Section */
     .videos-container {
       padding: 2em;
@@ -133,34 +132,28 @@
       align-items: center;
       gap: 2em;
     }
+
     .video-card {
       background-color: white;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      border-radius: 15px;
-      padding: 1.5em;
-      width: 90%;
+      border-radius: 7px;
+      padding: 1.2em;
+      width: 100%;
       max-width: 700px;
       text-align: center;
     }
+
     .video-card iframe {
       width: 100%;
-      height: 200px;
+      height: 300px; /* Adjusted for better display */
       border: none;
-      border-radius: 10px;
+      border-radius: 4px;
     }
+
     .video-card p {
       margin-top: 1em;
       font-weight: bold;
-      font-size: 1.1rem;
-    }
-    footer {
-      text-align: center;
-      padding: 1.5em;
-      background-color: #333;
-      color: white;
-      position: absolute;
-      width: 100%;
-      bottom: 0;
+      font-size: 1rem;
     }
 
     /* Responsive Styles */
@@ -218,7 +211,7 @@
     <div class="navbar-center">
       <a href="index.html">Home</a>
       <a href="#">Blog</a>
-      <a href="https://docs.google.com/spreadsheets/d/1lrARe0KmkXWm4PAfmqktoAVkX_ClrRSYQYFxlsmNA9s/edit?fbclid=IwY2xjawGYj0pleHRuA2FlbQIxMAABHV0EeZdQyNej9WsjDzJwAob_M3tjxAf2oZrgYDC90m9Bo8gRzLbs_kcP0w_aem_P_HPrxUcJ1rEEeUX5mRbRQ&gid=2118841264#gid=2118841264">Routine</a>
+      <a href="#">Routine</a>
     </div>
     <div class="navbar-right">
       <a href="#">👤</a>
@@ -226,80 +219,115 @@
     </div>
   </div>
 
- <!-- Videos Section -->
+<!-- Videos Section -->
 <div class="videos-container">
-  <!-- Existing Videos -->
+  <!-- Video Card 1 -->
   <div class="video-card">
     <iframe src="https://www.youtube.com/embed/TxqUEypS7RY?list=PL17Gl6E0YNz-1FL9figU88FDOIgL0TM3G" allowfullscreen></iframe>
     <p>Vector Class 1</p>
   </div>
+  
+  <!-- Video Card 2 -->
   <div class="video-card">
     <iframe src="https://www.youtube.com/embed/6O5RLquav4M?list=PL17Gl6E0YNz-1FL9figU88FDOIgL0TM3G" allowfullscreen></iframe>
     <p>Vector Class 2</p>
   </div>
+
+  <!-- Video Card 3 -->
   <div class="video-card">
     <iframe src="https://www.youtube.com/embed/hfQ-o8q6CKE?list=PL17Gl6E0YNz-1FL9figU88FDOIgL0TM3G" allowfullscreen></iframe>
     <p>Vector Class 3</p>
   </div>
   
-  <!-- New Videos -->
+  <!-- Video Card 4 -->
   <div class="video-card">
     <iframe src="https://www.youtube.com/embed/gfgHGAJl4sM?list=PL17Gl6E0YNz-1FL9figU88FDOIgL0TM3G" allowfullscreen></iframe>
     <p>Vector Class 4</p>
   </div>
+  
+  <!-- Video Card 5 -->
   <div class="video-card">
     <iframe src="https://www.youtube.com/embed/-8N7yeDwYos?list=PL17Gl6E0YNz-1FL9figU88FDOIgL0TM3G" allowfullscreen></iframe>
     <p>Vector Class 5</p>
   </div>
+  
+  <!-- Video Card 6 -->
   <div class="video-card">
     <iframe src="https://www.youtube.com/embed/Zz4XS4L6IY0?list=PL17Gl6E0YNz-1FL9figU88FDOIgL0TM3G" allowfullscreen></iframe>
     <p>Vector Class 6</p>
   </div>
+
+  <!-- Video Card 7 -->
   <div class="video-card">
     <iframe src="https://www.youtube.com/embed/3wf_yLxBmWU?list=PL17Gl6E0YNz-1FL9figU88FDOIgL0TM3G" allowfullscreen></iframe>
     <p>Vector Class 7</p>
   </div>
+
+  <!-- Video Card 8 -->
   <div class="video-card">
     <iframe src="https://www.youtube.com/embed/cp78DmjB_ng?list=PL17Gl6E0YNz-1FL9figU88FDOIgL0TM3G" allowfullscreen></iframe>
     <p>Vector Class 8</p>
   </div>
+
+  <!-- Video Card 9 -->
   <div class="video-card">
     <iframe src="https://www.youtube.com/embed/vzNFtJUZvGE?list=PL17Gl6E0YNz-1FL9figU88FDOIgL0TM3G" allowfullscreen></iframe>
     <p>Vector Class 9</p>
   </div>
+
+  <!-- Video Card 10 -->
   <div class="video-card">
     <iframe src="https://www.youtube.com/embed/Jrmljmq1nzM?list=PL17Gl6E0YNz-1FL9figU88FDOIgL0TM3G" allowfullscreen></iframe>
     <p>Vector Class 10</p>
   </div>
+
+  <!-- Video Card 11 -->
   <div class="video-card">
     <iframe src="https://www.youtube.com/embed/9yqN9DhXLMg?list=PL17Gl6E0YNz-1FL9figU88FDOIgL0TM3G" allowfullscreen></iframe>
     <p>Vector Class 11</p>
   </div>
+
+  <!-- Video Card 12 -->
   <div class="video-card">
     <iframe src="https://www.youtube.com/embed/AiHAiRRTsbk?list=PL17Gl6E0YNz-1FL9figU88FDOIgL0TM3G" allowfullscreen></iframe>
     <p>Vector Class 12</p>
   </div>
+
+  <!-- Video Card 13 -->
   <div class="video-card">
     <iframe src="https://www.youtube.com/embed/Bjob97YHlCc?list=PL17Gl6E0YNz-1FL9figU88FDOIgL0TM3G" allowfullscreen></iframe>
     <p>Vector Class 13</p>
   </div>
+
+  <!-- Video Card 14 -->
   <div class="video-card">
     <iframe src="https://www.youtube.com/embed/ZL8ehWTFl3o?list=PL17Gl6E0YNz-1FL9figU88FDOIgL0TM3G" allowfullscreen></iframe>
     <p>Vector Class 14</p>
   </div>
+
+  <!-- Video Card 15 -->
   <div class="video-card">
     <iframe src="https://www.youtube.com/embed/T94LLQPdPyQ?list=PL17Gl6E0YNz-1FL9figU88FDOIgL0TM3G" allowfullscreen></iframe>
     <p>Vector Class 15</p>
   </div>
+
+  <!-- Video Card 16 -->
   <div class="video-card">
     <iframe src="https://www.youtube.com/embed/TmC7Ii059Rk?list=PL17Gl6E0YNz-1FL9figU88FDOIgL0TM3G" allowfullscreen></iframe>
     <p>Vector Class 16</p>
   </div>
+
+  <!-- Video Card 17 -->
   <div class="video-card">
     <iframe src="https://www.youtube.com/embed/Lp-7k6Zs21k?list=PL17Gl6E0YNz-1FL9figU88FDOIgL0TM3G" allowfullscreen></iframe>
     <p>Vector Class 17</p>
   </div>
 </div>
+
+
+
+  <!-- Footer -->
+  <footer>Designed by <em>Topu</em></footer>
 
   <script>
     function toggleSidebar() {
