--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
       <a href="#">Routine</a>
     </div>
     <div class="navbar-right">
-      <a href="#">👤</a>
+      <a href="https://forms.gle/WP1ZyR7y167qheiHA">👤</a>
       <a href="#" class="cart-icon">🛒</a>
     </div>
   </div>
