--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Raians Academy</title>
+ 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+
   <style>
     /* Importing Roboto font from Google Fonts */
     @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
@@ -193,21 +197,42 @@
     #come-back-to-ALLAH-btn {
       background-image: linear-gradient(to right, #5d120d, #e96c6c); /* Gradient red */
     }
+    .alu{
+    text-align: center;
+    color: white;
+  }
 
+  .social-media {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding: 20px;
+    margin-top: 30px;
+  }
+  
+  .social-icon {
+    font-size: 2.5em;
+    color: #c6b6b6;
+    transition: transform 0.3s ease;
+  }
+  
+  .social-icon:hover {
+    transform: scale(1.2);
+  }
     .menu button:hover {
       transform: scale(1.1);
       box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.2);
     }
 
     footer {
-      text-align: center;
-      padding: 1.5em;
-      background-color: #333;
-      color: white;
-      position: absolute;
-      width: 100%;
-      bottom: 0;
-    }
+   text-align: center;
+   margin-top: 50px;
+ }
+ 
+ footer p {
+   font-size: 1.2em;
+   color: #bbb;
+ }
 
     /* Responsive Styles */
     @media (max-width: 768px) {
@@ -293,12 +318,38 @@
     <a href="#"><button id="come-back-to-ALLAH-btn">Come Back to ALLAH</button></a>
   </div>
 
+   <div class="alu">
+  <h3>Connect with us :</h3>
+  </div>
 
+  <div>
+  <section class="social-media">
+    <a href="#" target="_blank">
+      <i class="fab fa-facebook social-icon"></i>
+    </a>
+    <a href="https://t.me/mindful_chronicles" target="_blank">
+      <i class="fab fa-telegram social-icon"></i>
+    </a>
+    <a href="#" target="_blank">
+      <i class="fab fa-youtube social-icon"></i>
+    </a>
+  
+    <a href="https://raiansacademyblog.blogspot.com" target="_blank">
+      <i class="fab fa-blogger social-icon"></i>
+    </a>
+  </section></div>
+  <footer>
+  <p>Copyright &copy; 2024 Raians Academy.<br> All rights reserved.</p>
+</footer>
   <script>
     function toggleSidebar() {
       const sidebar = document.getElementById('sidebar');
       sidebar.classList.toggle('open');
     }
+   // Dark mode toggle functionality
+    const toggleDarkMode = () => {
+        document.body.classList.toggle('dark-mode');
+      };
   </script>
 </body>
 </html>
