--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     }
     .alu{
     text-align: center;
-    color: white;
+    color: black;
   }
 
   .social-media {
@@ -212,7 +212,7 @@
   
   .social-icon {
     font-size: 2.5em;
-    color: #c6b6b6;
+    color: black;
     transition: transform 0.3s ease;
   }
   
@@ -231,7 +231,7 @@
  
  footer p {
    font-size: 1.2em;
-   color: #bbb;
+   color: black;
  }
 
     /* Responsive Styles */
