--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     <button id="learn-more-btn">🛒 Let's Learn More</button>
     <a href="#"><button id="come-back-to-ALLAH-btn">Come Back to ALLAH</button></a>
   </div>
-
+  <br><br><br>
    <div class="alu">
   <h3>Connect with us :</h3>
   </div>
@@ -327,7 +327,7 @@
     <a href="#" target="_blank">
       <i class="fab fa-facebook social-icon"></i>
     </a>
-    <a href="https://t.me/mindful_chronicles" target="_blank">
+    <a href="https://t.me/raiansacademy" target="_blank">
       <i class="fab fa-telegram social-icon"></i>
     </a>
     <a href="#" target="_blank">
